y.output
Terminals unused in grammar

   POW_OP
   UMINUS
   POST_INC_OP
   PRE_INC_OP
   POST_DEC_OP
   PRE_DEC_OP
   REPEAT
   UNTIL
   RETURN


Grammar

    0 $accept: begin $end

    1 begin: program

    2 program: program statement
    3        | statement

    4 statement: expression_statement
    5          | selection_statement
    6          | loop_statement
    7          | jump_statement NEW_LINE
    8          | io_statement
    9          | statement error NEW_LINE

   10 statement_list: statement
   11               | statement_list statement

   12 expression_statement: expression NEW_LINE
   13                     | NEW_LINE

   14 expression: assignment_expression
   15           | expression ',' assignment_expression

   16 assignment_expression: conditional_expression
   17                      | IDENTIFIER '=' conditional_expression
   18                      | IDENTIFIER AND_ASSIGN conditional_expression
   19                      | IDENTIFIER OR_ASSIGN conditional_expression
   20                      | IDENTIFIER XOR_ASSIGN conditional_expression
   21                      | IDENTIFIER ADD_ASSIGN conditional_expression
   22                      | IDENTIFIER MUL_ASSIGN conditional_expression
   23                      | IDENTIFIER DIV_ASSIGN conditional_expression
   24                      | IDENTIFIER SUB_ASSIGN conditional_expression
   25                      | IDENTIFIER MOD_ASSIGN conditional_expression

   26 conditional_expression: logical_or_expression
   27                       | logical_or_expression '?' expression ':' conditional_expression

   28 logical_or_expression: logical_and_expression
   29                      | logical_or_expression OR_OP logical_and_expression

   30 logical_and_expression: or_expression
   31                       | logical_and_expression AND_OP or_expression

   32 or_expression: xor_expression
   33              | or_expression '|' xor_expression

   34 xor_expression: and_expression
   35               | xor_expression '^' and_expression

   36 and_expression: equality_expression
   37               | and_expression '&' equality_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ_OP relational_expression
   40                    | equality_expression NE_OP relational_expression

   41 relational_expression: additive_expression
   42                      | relational_expression '<' additive_expression
   43                      | relational_expression '>' additive_expression
   44                      | relational_expression GE_OP additive_expression
   45                      | relational_expression LE_OP additive_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression '+' multiplicative_expression
   48                    | additive_expression '-' multiplicative_expression

   49 multiplicative_expression: cast_expression
   50                          | multiplicative_expression '*' cast_expression
   51                          | multiplicative_expression '%' cast_expression
   52                          | multiplicative_expression '/' cast_expression

   53 cast_expression: unary_expression
   54                | '(' INT ')' cast_expression
   55                | '(' STRING ')' cast_expression

   56 unary_expression: postfix_expression
   57                 | INC_OP unary_expression
   58                 | DEC_OP unary_expression
   59                 | '-' cast_expression
   60                 | '+' cast_expression
   61                 | '!' cast_expression
   62                 | '~' cast_expression

   63 postfix_expression: primary_expression
   64                   | postfix_expression INC_OP
   65                   | postfix_expression DEC_OP

   66 primary_expression: IDENTIFIER
   67                   | REAL
   68                   | NUM
   69                   | STRING_LITERAL
   70                   | '(' expression ')'

   71 selection_statement: IF expression NEW_LINE statement_list END NEW_LINE
   72                    | IF expression NEW_LINE statement_list ELSE NEW_LINE statement_list END NEW_LINE

   73 $@1: %empty

   74 loop_statement: WHILE expression NEW_LINE $@1 statement_list END NEW_LINE

   75 $@2: %empty

   76 loop_statement: FOR IDENTIFIER '=' expression TO expression NEW_LINE $@2 statement_list END NEW_LINE

   77 jump_statement: BREAK
   78               | CONTINUE

   79 io_statement: PRINT expression NEW_LINE
   80             | INPUT '(' INT ')' IDENTIFIER NEW_LINE
   81             | INPUT '(' FLOAT ')' IDENTIFIER NEW_LINE
   82             | INPUT '(' STRING ')' IDENTIFIER NEW_LINE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'%' (37) 51
'&' (38) 37
'(' (40) 54 55 70 80 81 82
')' (41) 54 55 70 80 81 82
'*' (42) 50
'+' (43) 47 60
',' (44) 15
'-' (45) 48 59
'/' (47) 52
':' (58) 27
'<' (60) 42
'=' (61) 17 76
'>' (62) 43
'?' (63) 27
'^' (94) 35
'|' (124) 33
'~' (126) 62
error (256) 9
IDENTIFIER (258) 17 18 19 20 21 22 23 24 25 66 76 80 81 82
NUM (259) 68
REAL (260) 67
STRING_LITERAL (261) 69
INT (262) 54 80
FLOAT (263) 81
STRING (264) 55 82
INC_OP (265) 57 64
DEC_OP (266) 58 65
LE_OP (267) 45
GE_OP (268) 44
EQ_OP (269) 39
NE_OP (270) 40
POW_OP (271)
UMINUS (272)
POST_INC_OP (273)
PRE_INC_OP (274)
POST_DEC_OP (275)
PRE_DEC_OP (276)
AND_OP (277) 31
OR_OP (278) 29
MUL_ASSIGN (279) 22
DIV_ASSIGN (280) 23
MOD_ASSIGN (281) 25
ADD_ASSIGN (282) 21
SUB_ASSIGN (283) 24
AND_ASSIGN (284) 18
XOR_ASSIGN (285) 20
OR_ASSIGN (286) 19
NEW_LINE (287) 7 9 12 13 71 72 74 76 79 80 81 82
INPUT (288) 80 81 82
PRINT (289) 79
END (290) 71 72 74 76
IF (291) 71 72
ELSE (292) 72
WHILE (293) 74
FOR (294) 76
REPEAT (295)
UNTIL (296)
CONTINUE (297) 78
BREAK (298) 77
RETURN (299)
TO (300) 76


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
begin (65)
    on left: 1, on right: 0
program (66)
    on left: 2 3, on right: 1 2
statement (67)
    on left: 4 5 6 7 8 9, on right: 2 3 9 10 11
statement_list (68)
    on left: 10 11, on right: 11 71 72 74 76
expression_statement (69)
    on left: 12 13, on right: 4
expression (70)
    on left: 14 15, on right: 12 15 27 70 71 72 74 76 79
assignment_expression (71)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 14 15
conditional_expression (72)
    on left: 26 27, on right: 16 17 18 19 20 21 22 23 24 25 27
logical_or_expression (73)
    on left: 28 29, on right: 26 27 29
logical_and_expression (74)
    on left: 30 31, on right: 28 29 31
or_expression (75)
    on left: 32 33, on right: 30 31 33
xor_expression (76)
    on left: 34 35, on right: 32 33 35
and_expression (77)
    on left: 36 37, on right: 34 35 37
equality_expression (78)
    on left: 38 39 40, on right: 36 37 39 40
relational_expression (79)
    on left: 41 42 43 44 45, on right: 38 39 40 42 43 44 45
additive_expression (80)
    on left: 46 47 48, on right: 41 42 43 44 45 47 48
multiplicative_expression (81)
    on left: 49 50 51 52, on right: 46 47 48 50 51 52
cast_expression (82)
    on left: 53 54 55, on right: 49 50 51 52 54 55 59 60 61 62
unary_expression (83)
    on left: 56 57 58 59 60 61 62, on right: 53 57 58
postfix_expression (84)
    on left: 63 64 65, on right: 56 64 65
primary_expression (85)
    on left: 66 67 68 69 70, on right: 63
selection_statement (86)
    on left: 71 72, on right: 5
loop_statement (87)
    on left: 74 76, on right: 6
$@1 (88)
    on left: 73, on right: 74
$@2 (89)
    on left: 75, on right: 76
jump_statement (90)
    on left: 77 78, on right: 7
io_statement (91)
    on left: 79 80 81 82, on right: 8


State 0

    0 $accept: . begin $end

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    NEW_LINE        shift, and go to state 7
    INPUT           shift, and go to state 8
    PRINT           shift, and go to state 9
    IF              shift, and go to state 10
    WHILE           shift, and go to state 11
    FOR             shift, and go to state 12
    CONTINUE        shift, and go to state 13
    BREAK           shift, and go to state 14
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    begin                      go to state 20
    program                    go to state 21
    statement                  go to state 22
    expression_statement       go to state 23
    expression                 go to state 24
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    selection_statement        go to state 40
    loop_statement             go to state 41
    jump_statement             go to state 42
    io_statement               go to state 43


State 1

   17 assignment_expression: IDENTIFIER . '=' conditional_expression
   18                      | IDENTIFIER . AND_ASSIGN conditional_expression
   19                      | IDENTIFIER . OR_ASSIGN conditional_expression
   20                      | IDENTIFIER . XOR_ASSIGN conditional_expression
   21                      | IDENTIFIER . ADD_ASSIGN conditional_expression
   22                      | IDENTIFIER . MUL_ASSIGN conditional_expression
   23                      | IDENTIFIER . DIV_ASSIGN conditional_expression
   24                      | IDENTIFIER . SUB_ASSIGN conditional_expression
   25                      | IDENTIFIER . MOD_ASSIGN conditional_expression
   66 primary_expression: IDENTIFIER .

    MUL_ASSIGN  shift, and go to state 44
    DIV_ASSIGN  shift, and go to state 45
    MOD_ASSIGN  shift, and go to state 46
    ADD_ASSIGN  shift, and go to state 47
    SUB_ASSIGN  shift, and go to state 48
    AND_ASSIGN  shift, and go to state 49
    XOR_ASSIGN  shift, and go to state 50
    OR_ASSIGN   shift, and go to state 51
    '='         shift, and go to state 52

    $default  reduce using rule 66 (primary_expression)


State 2

   68 primary_expression: NUM .

    $default  reduce using rule 68 (primary_expression)


State 3

   67 primary_expression: REAL .

    $default  reduce using rule 67 (primary_expression)


State 4

   69 primary_expression: STRING_LITERAL .

    $default  reduce using rule 69 (primary_expression)


State 5

   57 unary_expression: INC_OP . unary_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 54
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    unary_expression    go to state 55
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 6

   58 unary_expression: DEC_OP . unary_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 54
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    unary_expression    go to state 56
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 7

   13 expression_statement: NEW_LINE .

    $default  reduce using rule 13 (expression_statement)


State 8

   80 io_statement: INPUT . '(' INT ')' IDENTIFIER NEW_LINE
   81             | INPUT . '(' FLOAT ')' IDENTIFIER NEW_LINE
   82             | INPUT . '(' STRING ')' IDENTIFIER NEW_LINE

    '('  shift, and go to state 57


State 9

   79 io_statement: PRINT . expression NEW_LINE

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    expression                 go to state 58
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39


State 10

   71 selection_statement: IF . expression NEW_LINE statement_list END NEW_LINE
   72                    | IF . expression NEW_LINE statement_list ELSE NEW_LINE statement_list END NEW_LINE

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    expression                 go to state 59
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39


State 11

   74 loop_statement: WHILE . expression NEW_LINE $@1 statement_list END NEW_LINE

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    expression                 go to state 60
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39


State 12

   76 loop_statement: FOR . IDENTIFIER '=' expression TO expression NEW_LINE $@2 statement_list END NEW_LINE

    IDENTIFIER  shift, and go to state 61


State 13

   78 jump_statement: CONTINUE .

    $default  reduce using rule 78 (jump_statement)


State 14

   77 jump_statement: BREAK .

    $default  reduce using rule 77 (jump_statement)


State 15

   60 unary_expression: '+' . cast_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    cast_expression     go to state 62
    unary_expression    go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 16

   59 unary_expression: '-' . cast_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    cast_expression     go to state 63
    unary_expression    go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 17

   54 cast_expression: '(' . INT ')' cast_expression
   55                | '(' . STRING ')' cast_expression
   70 primary_expression: '(' . expression ')'

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INT             shift, and go to state 64
    STRING          shift, and go to state 65
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    expression                 go to state 66
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39


State 18

   61 unary_expression: '!' . cast_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    cast_expression     go to state 67
    unary_expression    go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 19

   62 unary_expression: '~' . cast_expression

    IDENTIFIER      shift, and go to state 53
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    cast_expression     go to state 68
    unary_expression    go to state 37
    postfix_expression  go to state 38
    primary_expression  go to state 39


State 20

    0 $accept: begin . $end

    $end  shift, and go to state 69


State 21

    1 begin: program .
    2 program: program . statement

    IDENTIFIER      shift, and go to state 1
    NUM             shift, and go to state 2
    REAL            shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    INC_OP          shift, and go to state 5
    DEC_OP          shift, and go to state 6
    NEW_LINE        shift, and go to state 7
    INPUT           shift, and go to state 8
    PRINT           shift, and go to state 9
    IF              shift, and go to state 10
    WHILE           shift, and go to state 11
    FOR             shift, and go to state 12
    CONTINUE        shift, and go to state 13
    BREAK           shift, and go to state 14
    '+'             shift, and go to state 15
    '-'             shift, and go to state 16
    '('             shift, and go to state 17
    '!'             shift, and go to state 18
    '~'             shift, and go to state 19

    $default  reduce using rule 1 (begin)

    statement                  go to state 70
    expression_statement       go to state 23
    expression                 go to state 24
    assignment_expression      go to state 25
    conditional_expression     go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    or_expression              go to state 29
    xor_expression             go to state 30
    and_expression             go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    cast_expression            go to state 36
    unary_expression           go to state 37
    postfix_expression         go to state 38
    primary_expression         go to state 39
    selection_statement        go to state 40
    loop_statement             go to state 41
    jump_statement             go to state 42
    io_statement               go to state 43


State 22

    3 program: statement .
    9 statement: statement . error NEW_LINE

    error  shift, and go to state 71

    $end            reduce using rule 3 (program)
    IDENTIFIER      reduce using rule 3 (program)
    NUM             reduce using rule 3 (program)
    REAL            reduce using rule 3 (program)
    STRING_LITERAL  reduce using rule 3 (program)
    INC_OP          reduce using rule 3 (program)
    DEC_OP          reduce using rule 3 (program)
    NEW_LINE        reduce using rule 3 (program)
    INPUT           reduce using rule 3 (program)
    PRINT           reduce using rule 3 (program)
    IF              reduce using rule 3 (program)
    WHILE           reduce using rule 3 (program)
    FOR             reduce using rule 3 (program)
    CONTINUE        reduce using rule 3 (program)
    BREAK           reduce using rule 3 (program)
    '+'             reduce using rule 3 (program)
    '-'             reduce using rule 3 (program)
    '('             reduce using rule 3 (program)
    '!'             reduce using rule 3 (program)
    '~'             reduce using rule 3 (program)


State 23

    4 statement: expression_statement .

    $default  reduce using rule 4 (statement)


State 24

   12 expression_statement: expression . NEW_LINE
   15 expression: expression . ',' assignment_expression

    NEW_LINE  shift, and go to state 72
    ','       shift, and go to state 73


State 25

   14 expression: assignment_expression .

    $default  reduce using rule 14 (expression)


State 26

   16 assignment_expression: conditional_expression .

    $default  reduce using rule 16 (assignment_expression)


State 27

   26 conditional_expression: logical_or_expression .
   27                       | logical_or_expression . '?' expression ':' conditional_expression
   29 logical_or_expression: logical_or_expression . OR_OP logical_and_expression

    OR_OP  shift, and go to state 74
    '?'    shift, and go to state 75
